<resources>
    <string name="app_name">prOrder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This is fragment</string>
    <string name="Home">Home</string>
    <string name="Orders">Orders</string>
    <string name="my_account">My Account</string>
    <string name="Settings">Settings</string>
    <string name="welcome">Welcome To</string>
    <string name="start">Let`s start</string>
    <string name="clients_entrance">Clients Entrance</string>
    <string name="Sign">Sign In</string>
    <string name="Login">Login</string>
    <string name="enter">Enter To :</string>
    <string name="enterAsStaff">Staff Entrance</string>
    <string name="title_activity_register_client">RegisterClient</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_register_clients">RegisterClientsActivity</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="notRegistered">Not registered yet?</string>
    <string name="RegisterHere">Register here</string>
    <string name="Register">Register</string>
    <string name="Registered">Already registered?</string>
    <string name="LoginHere">Login here</string>
    <string name="title_activity_set_client_data">SetClientDataActivity</string>
    <string name="clients_data">Your Data</string>
    <string name="Name">Full Name</string>
    <string name="parent">Are you a parent?</string>
    <string name="Save">Save</string>
    <string name="Phone">Phone Number</string>
    <string name="child_data">Child Data</string>
    <string name="childName">Child Name</string>
    <string name="experience">Has past experience?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gender">Gender:</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Without">Without</string>
    <string name="Age">Age:</string>
    <string name="addChild">Add Child</string>
    <string name="explain">Little Explain</string>
    <string name="view">View Children</string>
    <string name="addTrainer">Add Trainer</string>
    <string name="trainer_data">Trainer`s Data</string>
    <string name="TrainerName">Trainer Name</string>
    <string name="TrainerEmail">Trainer Email</string>
    <string name="experienceYears">Years of experience:</string>
    <string name="Cancel">Cancel</string>
    <string name="showTrainer">Show Trainers</string>
    <string name="nextOrder">Your next order :</string>
    <string name="delete">Delete</string>
    <string name="deleteOrder">Delete this order</string>
    <string name="AddAnother">Add another child</string>
    <string name="another_child_data">Add Another Child Data</string>
    <string name="cancel">Cancel</string>
    <string name="validate">Validate</string>
    <string name="time_text">%1$s : %2$s</string>
    <string name="ChooseHour">Choose hour :</string>
    <string name="ChooseMinutes">Choose minutes :</string>
    <string name="welcomeBTN">Enter To Swim With Us !</string>
    <string name="OrderDate">The Order Date is :</string>
    <string name="OrderTo">Order To Trainer :</string>
    <string name="LessonNumber">Lesson number :</string>
    <string name="OrderTime">Order Time :</string>
    <string name="newOrder">Create New Order</string>
    <string name="pointTrainer">With ?</string>
    <string name="ChooseTrainer">Choose Trainer</string>
    <string name="showChosenDate">Date:</string>
    <string name="showChosenTrainer">Trainer:</string>
    <string name="pointDate">When ?</string>
    <string name="pointTime">Reserve...</string>
    <string name="Confirm">Confirm</string>
    <string name="BackToMain">Back To Main</string>
    <string name="choseChild">Choose Child:</string>
    <string name="change">Is there anything you would like to edit?</string>
    <string name="EditChildren">Edit Children</string>
    <string name="FutureRequests">Future Requests will be added</string>
    <string name="Edit">Edit</string>
    <string name="editChildrenInfo">When choosing name of child always press \"edit\" button!</string>

</resources>