<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:padding="8dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#59189AB4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OrderTo"
            android:id="@+id/orderRow_txt_trainerName"
            android:textColor="#C508535D"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OrderDate"
            android:id="@+id/orderRow_txt_date"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OrderTime"
            android:textSize="18sp"
            android:id="@+id/orderRow_txt_time"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LessonNumber"
            android:id="@+id/orderRow_txt_numberOfLessons"
            android:textColor="#C508535D"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>