<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ClientsActivities.AddAnotherChildActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/anotherChild_IMG_Close"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_close_window"
                    android:background="@drawable/ic_blue"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/another_child_data"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/teal_700"
                    android:gravity="center_horizontal"
                    android:layout_marginVertical="16dp"/>

                <EditText
                    android:id="@+id/childrenData_childName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/childName"
                    android:inputType="textEmailAddress"
                    android:textAlignment="textStart" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/gender"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/childrenData_Male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/Male"
                    android:backgroundTint="@color/entrance_button_background"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/childrenData_Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/Female"
                    android:backgroundTint="@color/entrance_button_background"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:layout_gravity="center">

                </com.google.android.material.button.MaterialButton>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/childrenData_WithoutGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Without"
                    android:backgroundTint="@color/entrance_button_background"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center">

                </com.google.android.material.button.MaterialButton>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Age"/>

                <Spinner
                    android:id="@+id/childrenData_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="16dp"
                    android:minHeight="48dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/experience"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/childrenData_experience_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/yes"
                    android:backgroundTint="@color/entrance_button_background"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/childrenData_experience_false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/no"
                    android:backgroundTint="@color/entrance_button_background"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <EditText
                    android:id="@+id/childExperience_experience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/explain"
                    android:inputType="textEmailAddress"
                    android:textAlignment="textStart" />
                <!--
                                <FrameLayout
                                    android:id="@+id/childrenData_frameLayout"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="16dp"></FrameLayout>
                -->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/childrenData_BTN_addChild"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:text="@string/AddAnother"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/childrenData_BTN_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/Save"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>